@@ -1,4 +1,5 @@
 require 'active_merchant/errors'
+require 'active_merchant/versionable'
 
 require 'active_merchant/billing/avs_result'
 require 'active_merchant/billing/cvv_result'
