@@ -14,7 +14,7 @@ module ActiveMerchant # :nodoc:
       self.homepage_url = 'https://www.barclaycardsmartpay.com/'
       self.display_name = 'Barclaycard Smartpay'
 
-      API_VERSION = 'v40'
+      version 'v40'
 
       def initialize(options = {})
         requires!(options, :company, :merchant, :password)
@@ -257,13 +257,13 @@ module ActiveMerchant # :nodoc:
       def build_url(action)
         case action
         when 'store'
-          "#{test? ? self.test_url : self.live_url}/Recurring/#{API_VERSION}/storeToken"
+          "#{test? ? self.test_url : self.live_url}/Recurring/#{fetch_version}/storeToken"
         when 'finalize3ds'
-          "#{test? ? self.test_url : self.live_url}/Payment/#{API_VERSION}/authorise3d"
+          "#{test? ? self.test_url : self.live_url}/Payment/#{fetch_version}/authorise3d"
         when 'storeDetailAndSubmitThirdParty', 'confirmThirdParty'
-          "#{test? ? self.test_url : self.live_url}/Payout/#{API_VERSION}/#{action}"
+          "#{test? ? self.test_url : self.live_url}/Payout/#{fetch_version}/#{action}"
         else
-          "#{test? ? self.test_url : self.live_url}/Payment/#{API_VERSION}/#{action}"
+          "#{test? ? self.test_url : self.live_url}/Payment/#{fetch_version}/#{action}"
         end
       end
 
