@@ -104,6 +104,7 @@
 * Worldpay: Fix stored credentials unscheduled reason type [Buitragox] #5352
 * Worldpay: Worldpay: Idempotency key fix [jherreraa] #5359
 * Hi Pay: Don't add 3ds when :three_ds_2 is missing [Buitragox] #5355
+* Normalize API versions [Buitragox] #5319
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
